--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -30,8 +30,8 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-html,
-body {
+body,
+html {
     width: 100%;
     height: 100%;
 }
@@ -131,6 +131,8 @@ h6 {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     background-color: #293241;
 }
@@ -138,4 +140,17 @@ h6 {
 .main_title {
     align-content: center;
     color: #e0fbfc;
+}
+
+.form_box {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-label {
+    color: #e0fbfc;
+}
+
+.image-box {
+    align-self: center;
 }
