--- a/templates/form.html
+++ b/templates/form.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', path='/styles/main.css') }}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>HowRU</title>
   </head>
   <body>
     <div class="parent_box">
-      <h1 class="main_title">{{ message }}</h1>
+      <div class="p-5">
+        <h1 class="main_title">{{ message }}</h1>
+      </div>
+      <div class="form_box">
+        <form action="/process" method="post" enctype="multipart/form-data">
+          <div class="mb-3">
+            <label for="fileInput" class="form-label">Email address</label>
+            <input
+              type="file"
+              class="form-control form-control-lg"
+              id="fileInput"
+              name="file"
+              placeholder="Choose some picture"
+            />
+          </div>
+          <br />
+          <div class="d-grid gap-2">
+            <button class="btn btn-lg btn-primary" type="submit">Button</button>
+          </div>
+        </form>
+      </div>
     </div>
   </body>
 </html>
