--- a/templates/result.html
+++ b/templates/result.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', path='/styles/main.css') }}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>HowRU</title>
   </head>
   <body>
     <div class="parent_box">
-      <h1 class="main_title">{{ message }}</h1>
+      <div class="p-5">
+        <h1 class="main_title">LOOK AT THIS MONKEY!!!</h1>
+      </div>
+      <div class="form_box image-box">
+        <div class="mb-3 image-box">
+          <img
+            src="http://127.0.0.1:8000/file/{{file_name}}"
+            width="200px"
+            height="200px"
+            alt="picture"
+          />
+        </div>
+        <br />
+        <div class="d-grid gap-2 text-center main_title">
+          <h5>{{message}}</h5>
+        </div>
+      </div>
     </div>
   </body>
 </html>
